- Improving Script to launch a Docker container with JVM application   configured to run a Microservice - Initial Docker compose